# kanoniv

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/validator/: Cargo.toml  README.md
crates/validator/src/: lib.rs  main.rs  python.rs
crates/validator/src/commands/: compile.rs  mod.rs  plan.rs
examples/: kanoniv-playground.ipynb
examples/customer-identity-resolution/: README.md
examples/customer-identity-resolution/dbt-sql/: README.md  calculate_metrics.py  dbt_project.yml  profiles.yml
examples/customer-identity-resolution/dbt-sql/macros/: identity_macros.sql
examples/customer-identity-resolution/dbt-sql/models/marts/: dim_customers.sql
examples/customer-identity-resolution/kanoniv/: README.md  customer_entity.ipynb  kanoniv.yml
examples/customer-identity-resolution/splink/: README.md  requirements.txt  resolve.py
examples/product-reconciliation/: README.md  product_reconciliation.ipynb
examples/product-reconciliation/data/: ecommerce_catalog.csv  marketplace_listings.csv  retail_inventory.csv  wholesale_feed.csv
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/src/kanoniv/: __init__.py  _native.pyi  changelog.py  cloud.py  cloud_io.py  diff.py  evaluate.py  exceptions.py  plan.py  reconcile.py  source.py  spec.py  staging.py  validate.py
python/src/kanoniv/adapters/: arrow.py  dbt.py  duckdb.py  file.py  pandas.py  polars.py  warehouse.py
python/src/kanoniv/cli/: __main__.py  config.py  http.py  main.py  output.py
python/src/kanoniv/cli/commands/: agent.py  ask.py  auth.py  engine.py  entity.py  export.py  feedback.py  graph.py  ingest.py  job.py  knowledge.py  lineage.py  match.py  memory.py  offline.py  override.py  purge.py  row.py  source.py  spec.py  system.py  task.py
python/src/kanoniv/client/: __init__.py  _transport.py  client.py  models.py
python/src/kanoniv/client/resources/: __init__.py  audit.py  entities.py  feedback.py  jobs.py  overrides.py  resolve.py  reviews.py  rules.py  sandbox.py  sources.py  specs.py  webhooks.py
python/src/kanoniv/memory/: __init__.py  embeddings.py  entry.py  extract.py  local.py  store.py  sync.py
python/tests/: conftest.py  test_client.py  test_entities.py  test_resources.py
