[package]
name = "kanoniv-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
kanoniv_core = { package = "kanoniv", path = "../crates/validator" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
