[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kanoniv"
version = "0.3.1"
description = "Identity resolution as code"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
cloud = ["httpx>=0.27", "pydantic>=2.0"]
dataplane = ["pyarrow>=14.0", "duckdb>=1.0", "snowflake-connector-python>=3.0"]
databricks = ["pyarrow>=14.0", "duckdb>=1.0", "databricks-sql-connector>=3.0"]
bigquery = ["pyarrow>=14.0", "duckdb>=1.0", "google-cloud-bigquery>=3.0", "db-dtypes>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
kanoniv = "kanoniv.cli.main:main"

[tool.maturin]
features = []
module-name = "kanoniv._native"
python-source = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
